<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PersonalActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar"
        app:elevation="@null">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_height="match_parent"
            android:weightSum="1"
            app:contentInsetStart="@null"
            app:elevation="@null">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/about"
                android:textStyle="normal"
                android:id="@+id/toolbar_title" />


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_below="@id/appBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPersonal"
            android:src="@drawable/photoperson"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/txtPersonName"
            android:layout_below="@+id/ivPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/personal_name"
            android:textSize="20sp"
            android:textColor="@color/colorBlack" />
        <TextView
            android:id="@+id/txtPersonEmail"
            android:layout_below="@id/txtPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/personal_email"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />
    </RelativeLayout>
</RelativeLayout>